--- a/Configs/.config/hypr/hyprland.conf
+++ b/Configs/.config/hypr/hyprland.conf
@@ -67,12 +67,12 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = true
     }
 
     sensitivity = 0
-    force_no_accel = 1
-    numlock_by_default = true
+    force_no_accel = 0
+    numlock_by_default = false
 }
 
 # See https://wiki.hyprland.org/Configuring/Keywords/#executing
